--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
     <title>Super Gemini Bros</title>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#020617">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
             margin: 0;
+            padding: 0;
             overflow: hidden;
-            background-color: #020617;
+            background-color: #000;
             user-select: none;
             -webkit-user-select: none;
             touch-action: none;
-        }
-        canvas {
-            display: block;
-            image-rendering: pixelated;
-            margin: auto;
-        }
-        #root {
             width: 100vw;
             height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+        }
+        #root {
+            width: 100%;
+            height: 100%;
         }
     </style>
 <script type="importmap">
@@ -45,7 +41,6 @@
 </head>
 <body>
     <div id="root"></div>
-    <!-- PONTO DE ENTRADA CRUCIAL PARA O VERCEL -->
     <script type="module" src="./index.tsx"></script>
 </body>
 </html>
